refactor websocket with new inbound adapter
